# ReqDB

./: .gitignore  Dockerfile  README.md  app.py  deployZip.sh  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt  template.env
api/: __init__.py  appDefinition.py  audit.py  config.py  error.py  errorHandler.py  helper.py  models.py  schemas.py  updateSchemas.py  versionSchemas.py
api/connectors/: __init__.py  jira.py
api/endpoints/: __init__.py  audit.py  base.py  catalogues.py  coffee.py  comments.py  config.py  extraEntries.py  extraTypes.py  requirements.py  tags.py  topics.py  wildcard.py
api/models/: __init__.py  base.py  db.py  insert.py  public.py  response.py  update.py
api/routers/: __init__.py  audit.py  auth.py  catalogue.py  coffee.py  comment.py  config.py  export.py  extraEntry.py  extraType.py  requirement.py  serviceUser.py  tag.py  topic.py
api/scripts/: buildConnectionString.py  populateDBASVS.py
auth/: __init__.py  models.py
front-end/: .babelrc.js  README.md  babel.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  template.env  tsconfig.json  vite.config.ts
front-end/public/: index.html  manifest.json
front-end/src/: APIClient.ts  App.css  App.js  App.jsx  App.tsx  authConfig.js  authConfig.ts  hooks.ts  index.js  index.jsx  index.tsx  static.js  static.jsx  static.ts  store.jsx  store.ts
helper/: cache.py
scripts/: importASVS.py  populateDBASVS.py
spa/: .babelrc.js  README.md  babel.config.js  package-lock.json  package.json  vite.config.ts
spa/src/: APIClient.ts  APIClients.ts  (+7 more)
(+271 files in other folders)
