[tool.poetry]
name = "reqdb"
version = "0.1.0"
description = ""
authors = ["dcfSec <contributor@dcfsec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-restful = "^0.3.10"
flask-jwt-extended = {extras = ["asymmetric-crypto"], version = "^4.7.1"}
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.1.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
pyodbc = "^5.2.0"
flask-migrate = "^4.0.7"
sqlalchemy-continuum = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
