[tool.poetry]
name = "reqdb"
version = "0.1.0"
description = ""
authors = ["dcfSec <contributor@dcfsec.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pyodbc = "^5.2.0"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.7"
fastapi-cli = "^0.0.7"
sqlmodel = "^0.0.22"
authlib = "^1.4.0"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"
alembic = "^1.14.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
